--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
   },
   "devDependencies": {
     "express": "^4.10.6",
+    "socket.io": "^1.2.1",
     "serve-favicon": "^2.2.0",
-    "socket.io": "^1.2.1"
+    "grunt": "^0.4.5",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-sass": "^0.8.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "time-grunt": "^1.0.0"
   }
 }
