--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "url": "git://github.com/jrodl3r/unorderedlist.git"
   },
   "devDependencies": {
-    "express": "^4.10.6",
+    "express": "^4.11.0",
+    "mongoose": "^3.9.7",
+    "socket.io": "^1.3.2",
+    "serve-favicon": "^2.2.0",
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-nodemon": "^0.3.0",
-    "serve-favicon": "^2.2.0",
-    "socket.io": "^1.2.1",
     "time-grunt": "^1.0.0"
   }
 }
