--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "unorderedlist",
+  "name": "UnorderedList",
   "version": "0.0.1",
   "author": "John Rodler <john@jrod.io>",
   "repository": {
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "express": "^4.11.0",
-    "mongoose": "^3.9.7",
+    "mongoose": "^3.8.21",
     "socket.io": "^1.3.2",
     "serve-favicon": "^2.2.0",
     "grunt": "^0.4.5",
