--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "type": "git",
     "url": "git://github.com/jrodl3r/unorderedlist.git"
   },
-  "devDependencies": {
+  "dependencies": {
     "express": "^4.11.0",
     "mongoose": "^3.8.21",
     "socket.io": "^1.3.2",
