--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "node": "0.10.x"
   },
   "dependencies": {
+    "body-parser": "^1.10.2",
     "express": "^4.11.0",
-    "mongoose": "^3.8.21",
-    "socket.io": "^1.3.2",
-    "serve-favicon": "^2.2.0",
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-watch": "^0.6.1",
+    "mongoose": "^3.8.21",
+    "serve-favicon": "^2.2.0",
+    "socket.io": "^1.3.2",
     "time-grunt": "^1.0.0"
   },
   "license": "MIT"
