--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "mongoose": "^3.8.21",
     "body-parser": "^1.10.2",
     "serve-favicon": "^2.2.0",
-    "grunt": "^0.4.5"
-  },
-  "devDependencies": {
+    "grunt": "^0.4.5",
     "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-jasmine": "^0.8.2",
+    "grunt-preprocess": "^4.1.0"
+  },
+  "devDependencies": {
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-preprocess": "^4.1.0",
     "time-grunt": "^1.0.0"
   },
   "license": "MIT"
