--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -14,13 +14,18 @@
   ],
   "options_page": "options.html",
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "icon32.png",
     "default_title": "UnorderedList",
     "default_popup": "action.html"
   },
   "background": {
     "scripts": ["background.js"],
     "persistent": false
+  },
+  "icons": {
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
   },
   "commands": {
     "paste": {
