--- a/chrome/ext/manifest.json
+++ b/chrome/ext/manifest.json
@@ -2,7 +2,7 @@
   "name": "UnorderedList",
   "description": "UnorderedList Chrome Extension",
   "homepage_url": "http://unorderedlist.com",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "manifest_version": 2,
   "permissions": [
     "tabs",
@@ -13,6 +13,9 @@
     "http://*/*",
     "https://*/*"
   ],
+  "externally_connectable": {
+    "matches": ["unorderedlist.com/*"]
+  },
   "options_page": "options.html",
   "browser_action": {
     "default_icon": "icon32.png",
