--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "git://github.com/jrodl3r/unorderedlist.git"
   },
   "engines": {
-    "node": "0.10.x"
+    "node": "5.4.0"
   },
   "dependencies": {
     "express": "^4.11.0",
