--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "body-parser": "^1.10.2",
     "serve-favicon": "^2.2.0",
     "grunt": "^0.4.5",
-    "grunt-contrib-sass": "^0.9.2",
-    "grunt-contrib-jasmine": "^0.8.2"
+    "grunt-preprocess": "^5.0.1",
+    "grunt-contrib-sass": "^0.9.2"
   },
   "devDependencies": {
+    "grunt-contrib-jasmine": "^0.8.2",
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-preprocess": "^4.2.0",
     "mongoose": "^4.3.6",
     "time-grunt": "^1.3.0"
   },
