--- a/package.json
+++ b/package.json
@@ -7,21 +7,18 @@
     "type": "git",
     "url": "git://github.com/jrodl3r/unorderedlist.git"
   },
-  "engines": {
-    "node": "5.4.0"
-  },
   "dependencies": {
     "express": "^4.11.0",
     "socket.io": "^1.3.2",
-    "mongoose": "^3.8.21",
-    "body-parser": "^1.10.2",
-    "serve-favicon": "^2.2.0",
+    "mongoose": "^4.3.6",
+    "body-parser": "^1.14.2",
+    "serve-favicon": "^2.3.0",
     "grunt": "^0.4.5",
     "grunt-preprocess": "^5.0.1",
-    "grunt-contrib-sass": "^0.9.2"
+    "grunt-contrib-sass": "^0.9.2",
+    "grunt-contrib-jasmine": "^0.9.2"
   },
   "devDependencies": {
-    "grunt-contrib-jasmine": "^0.8.2",
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
     "mongoose": "^4.3.6",
