--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "serve-favicon": "^2.3.0",
     "grunt": "^0.4.5",
     "grunt-preprocess": "^5.0.1",
-    "grunt-contrib-sass": "^0.9.2",
-    "grunt-contrib-jasmine": "^0.9.2"
+    "grunt-contrib-sass": "^0.9.2"
   },
   "devDependencies": {
     "grunt-contrib-jshint": "^0.11.0",
+    "grunt-contrib-jasmine": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
     "mongoose": "^4.3.6",
     "time-grunt": "^1.3.0"
