--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "type": "git",
     "url": "git://github.com/jrodl3r/unorderedlist.git"
   },
+  "engines": {
+    "node": "5.4.x"
+  },
   "dependencies": {
     "express": "^4.11.0",
     "socket.io": "^1.3.2",
