--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
   "name": "UnorderedList",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "app.js",
   "author": "John Rodler <john@jrod.io>",
   "repository": {
     "type": "git",
     "url": "git://github.com/jrodl3r/unorderedlist.git"
-  },
-  "engines": {
-    "node": "5.4.x"
   },
   "dependencies": {
     "express": "^4.11.0",
@@ -18,7 +15,8 @@
     "serve-favicon": "^2.3.0",
     "grunt": "^0.4.5",
     "grunt-preprocess": "^5.0.1",
-    "grunt-contrib-sass": "^0.9.2"
+    "grunt-contrib-sass": "^0.9.2",
+    "grunt-contrib-jasmine": "^0.9.2"
   },
   "devDependencies": {
     "grunt-contrib-jshint": "^0.11.0",
