--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "git://github.com/jrodl3r/unorderedlist.git"
   },
   "dependencies": {
+    "kerberos": "~0.0.17",
     "express": "^4.11.0",
     "socket.io": "^1.3.2",
     "mongoose": "^4.3.6",
