--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "type": "git",
     "url": "git://github.com/jrodl3r/unorderedlist.git"
   },
+  "engines": {
+    "node": "0.12.2"
+  },
   "dependencies": {
     "kerberos": "~0.0.17",
     "express": "^4.11.0",
