--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "serve-favicon": "^2.3.0",
     "grunt": "^0.4.5",
     "grunt-preprocess": "^5.0.1",
-    "grunt-contrib-sass": "^0.9.2"
+    "grunt-contrib-sass": "^0.9.2",
+    "grunt-contrib-jasmine": "^0.9.2"
   },
   "devDependencies": {
     "grunt-contrib-jshint": "^0.11.0",
