--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "UnorderedList",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "main": "app.js",
   "author": "John Rodler <john@jrod.io>",
   "repository": {
@@ -8,7 +8,7 @@
     "url": "git://github.com/jrodl3r/unorderedlist.git"
   },
   "engines": {
-    "node": "0.12.2"
+    "node": "0.12.x"
   },
   "dependencies": {
     "express": "^4.11.0",
@@ -17,14 +17,19 @@
     "body-parser": "^1.14.2",
     "serve-favicon": "^2.3.0",
     "grunt": "^0.4.5",
+    "grunt-cli": "*",
     "grunt-preprocess": "^5.0.1",
-    "grunt-contrib-sass": "^0.9.2",
+    "grunt-contrib-sass": "^0.8.1",
+    "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-jasmine": "^0.9.2"
   },
   "devDependencies": {
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
     "time-grunt": "^1.3.0"
+  },
+  "scripts": {
+    "postinstall": "./node_modules/grunt-cli/bin/grunt"
   },
   "license": "MIT"
 }
