--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "grunt-preprocess": "^5.0.1",
     "grunt-contrib-sass": "^0.8.1",
     "grunt-contrib-requirejs": "^0.4.4",
-    "grunt-contrib-jasmine": "^0.9.2"
-  },
-  "devDependencies": {
+    "grunt-contrib-jasmine": "^0.9.2",
     "grunt-contrib-jshint": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
     "time-grunt": "^1.3.0"
