--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "url": "git://github.com/jrodl3r/unorderedlist.git"
   },
   "engines": {
-    "node": "0.12.x"
+    "node": "0.10.36"
   },
   "dependencies": {
     "express": "^4.11.0",
     "socket.io": "^1.3.2",
-    "mongoose": "^4.3.6",
+    "mongoose": "^4.0.5",
     "body-parser": "^1.14.2",
     "serve-favicon": "^2.3.0",
     "grunt": "^0.4.5",
